[tool.poetry]
name = "pyls"
version = "0.1.0"
description = "Python utility ls command"
authors = ["pawan-subudhi <pawansubudhi98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyls = "pyls.pyls:main"
